docker postgres ready
