# weather/service/docs/swagger.json
@@ -269,13 +269,6 @@
                         "name": "name",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Название города",
-                        "name": "city",
-                        "in": "query",
-                        "required": true
                     }
                 ],
                 "responses": {
